DevOps-Trainee-Course/Module-6/Task_3.4/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-deployment
spec:
  selector:
    matchLabels:
      task: certmanager
  replicas: 1
  template:
    metadata:
      labels: 
        task: certmanager
    spec:
      containers:
        - name: random-deployment-container
          image: nginx:stable
          ports:
            - containerPort: 80
---
apiVersion: v1 
kind: Service
metadata:
  name: random-app-service
spec:
  selector: 
    task: certmanager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
